--- a/10-findable.bib
+++ b/10-findable.bib
@@ -1,10 +1,79 @@
-@article{noble2009,
-  author = {William Stafford Noble},
-  title = "{A Quick Guide to Organizing Computational Biology Projects}",
-  journal = {PLoS Computational Biology},
-  volume = {5},
-  number = {7},
-  article = {e1000424},
-  year = {2009},
-  doi = {10.1371/journal.pcbi.1000424}
+@article{Bates2002,
+  title   = "Toward an integrated model of information seeking and searching",
+  journal = "New Review of Information Behaviour Research",
+  volume  = "3",
+  pages   = "1-15",
+  year    = "2002",
+  author  = "Marcia J. Bates"
+}
+
+@book{Covert2014,
+ author = {Abby Covert},
+ title = {How to Make Sense of Any Mess},
+ year = {2014},
+ publisher = {CreateSpace Independent Publishing Platform},
+ isbn = {9781500615994},
+}
+
+@book{Krug2014,
+ author = {Steve Krug},
+ title = {Don't Make Me Think, Revisited},
+ year = {2014},
+ publisher = {New Riders},
+ isbn = {9780321965516},
+}
+
+@book{Wilson2020,
+ author = {JGreg Wilson},
+ title = {Teaching Tech Together},
+ year = {2020},
+ publisher = {CRC Press},
+ isbn = {9780367352974},
+}
+
+@book{Hedden2016,
+ author = {Heather Hedden},
+ title = {The Accidental Taxonomist},
+ year = {2016},
+ publisher = {Information Today},
+ isbn = {9781573875288},
+}
+
+@book{Rosenfeld2015,
+ author = {Louis Rosenfeld, Peter Morville, & Joge Arango},
+ title = {Information Architecture},
+ year = {2015},
+ publisher = {O'Reilly Media Inc.},
+ isbn = {9781491911686},
+}
+
+@book{Arango2018,
+ author = {Jorge Arango},
+ title = {Living in Information},
+ year = {2018},
+ publisher = {Two Waves Books},
+ isbn = {9781933820651},
+}
+
+@book{Briney2015,
+ author = {Kristin Briney},
+ title = {Data Management for Researchers},
+ year = {2015},
+ publisher = {Pelagic Publishing},
+ isbn = {9781784270131},
+}
+
+@book{Joudrey2015,
+ author = {Daniel N. Joudrey, Arlene G. Taylor, & David P. Miller},
+ title = {Introduction to Cataloging and Classification},
+ year = {2015},
+ publisher = {Libraries Unlimited},
+ isbn = {9781598848571},
+}
+
+@misc{ASI2020,
+ author = {American Society of Indexers},
+ title = {Online Thesauri and Authority Files},
+ year = {2020},
+ howpublished = {\url{https://www.asindexing.org/about-indexing/thesauri/online-thesauri-and-authority-files/}}
 }
