--- a/10-findable.bib
+++ b/10-findable.bib
@@ -1,58 +1,33 @@
-@article{Bates2002,
-  title   = "Toward an integrated model of information seeking and searching",
-  journal = "New Review of Information Behaviour Research",
-  volume  = "3",
-  pages   = "1-15",
-  year    = "2002",
-  author  = "Marcia J. Bates"
-}
-
-@book{Covert2014,
- author = {Abby Covert},
- title = {How to Make Sense of Any Mess},
- year = {2014},
- publisher = {CreateSpace Independent Publishing Platform},
- isbn = {9781500615994},
-}
-
-@book{Krug2014,
- author = {Steve Krug},
- title = {Don't Make Me Think, Revisited},
- year = {2014},
- publisher = {New Riders},
- isbn = {9780321965516},
-}
-
-@book{Wilson2020,
- author = {JGreg Wilson},
- title = {Teaching Tech Together},
- year = {2020},
- publisher = {CRC Press},
- isbn = {9780367352974},
-}
-
-@book{Hedden2016,
- author = {Heather Hedden},
- title = {The Accidental Taxonomist},
- year = {2016},
- publisher = {Information Today},
- isbn = {9781573875288},
-}
-
-@book{Rosenfeld2015,
- author = {Louis Rosenfeld, Peter Morville, & Joge Arango},
- title = {Information Architecture},
- year = {2015},
- publisher = {O'Reilly Media Inc.},
- isbn = {9781491911686},
-}
-
 @book{Arango2018,
  author = {Jorge Arango},
  title = {Living in Information},
  year = {2018},
  publisher = {Two Waves Books},
  isbn = {9781933820651},
+}
+
+@misc{ASI2020,
+ author = {{American Society of Indexers}},
+ title = {Online Thesauri and Authority Files},
+ year = {2020},
+ howpublished = {\url{https://www.asindexing.org/about-indexing/thesauri/online-thesauri-and-authority-files/}}
+}
+
+@article{Bates2002,
+ title = {Toward an integrated model of information seeking and searching},
+ author = {Marcia J. Bates},
+ journal = {New Review of Information Behaviour Research},
+ volume = {3},
+ pages = {1-15},
+ year = {2002}
+}
+
+@book{Borges2000,
+ author = {{Jorge Luis} Borges},
+ title = {Selected Non-Fictions},
+ year = {2000},
+ publisher = {Penguin},
+ isbn = {9780140290110}
 }
 
 @book{Briney2015,
@@ -63,17 +38,92 @@
  isbn = {9781784270131},
 }
 
+@book{Covert2014,
+ author = {Abby Covert},
+ title = {How to Make Sense of Any Mess},
+ year = {2014},
+ publisher = {CreateSpace Independent Publishing Platform},
+ isbn = {9781500615994},
+}
+
+@book{Hedden2016,
+ author = {Heather Hedden},
+ title = {The Accidental Taxonomist},
+ year = {2016},
+ publisher = {Information Today},
+ isbn = {9781573875288},
+}
+
 @book{Joudrey2015,
- author = {Daniel N. Joudrey, Arlene G. Taylor, & David P. Miller},
+ author = {Daniel N. Joudrey and Arlene G. Taylor and David P. Miller},
  title = {Introduction to Cataloging and Classification},
  year = {2015},
  publisher = {Libraries Unlimited},
  isbn = {9781598848571},
 }
 
-@misc{ASI2020,
- author = {American Society of Indexers},
- title = {Online Thesauri and Authority Files},
- year = {2020},
- howpublished = {\url{https://www.asindexing.org/about-indexing/thesauri/online-thesauri-and-authority-files/}}
+@book{Krug2014,
+ author = {Steve Krug},
+ title = {Don't Make Me Think, Revisited},
+ year = {2014},
+ publisher = {New Riders},
+ isbn = {9780321965516},
+}
+
+@misc{Pudding,
+  author = {{The Pudding}},
+  title = {Data sets created for stores on {The Pudding}},
+  year = {2020},
+  howpublished = {https://github.com/the-pudding/data}
+}
+
+@book{Rosenfeld2015,
+ author = {Louis Rosenfeld and Peter Morville and Joge Arango},
+ title = {Information Architecture},
+ year = {2015},
+ publisher = {O'Reilly Media Inc.},
+ isbn = {9781491911686},
+}
+
+@book{Williams2015,
+  author = {Brad Williams and David Damstra and Hal Stern},
+  title = {Professional WordPress: Design and Development},
+  publisher = {Wrox},
+  edition = {3rd},
+  year = {2015},
+  isbn = {9781118987247}
+}
+
+@article{Wilson2014,
+  author = {Greg Wilson and D. A. Aruliah and C. Titus Brown and Neil P. Chue Hong and Matt Davis and Richard T. Guy and Steven H. D. Haddock and Kathryn D. Huff and Ian M. Mitchell and Mark D. Plumbley and Ben Waugh and Ethan P. White and Paul Wilson},
+  journal = {{PLoS Biology}},
+  publisher = {{PLoS}},
+  title = {Best Practices for Scientific Computing},
+  year = {2014},
+  month = {January},
+  volume = {12},
+  number = {1},
+  doi = {10.1371/journal.pbio.1001745}
+}
+
+@article{Wilson2017,
+  author = {Greg Wilson and Jennifer Bryan and Karen Cranston and Justin Kitzes and Lex Nederbragt and Tracy K. Teal},
+  journal = {{PLoS} Computational Biology},
+  publisher = {Public Library of Science},
+  title = {Good Enough Practices in Scientific Computing},
+  year = {2017},
+  month = {06},
+  volume = {13},
+  number = {6},
+  pages = {1-20},
+  doi = {10.1371/journal.pcbi.1005510},
+  link = {https://doi.org/10.1371/journal.pcbi.1005510}
+}
+
+@book{Xie2017,
+ author = {Yihui Xie and Amber Thomas and Alison Presmanes Hill},
+ title = {{blogdown}: Creating Websites with R~Markdown},
+ publisher = {Chapman and Hall/CRC},
+ year = {2017},
+ isbn = {9780815363729}
 }
