--- a/10-findable.tex
+++ b/10-findable.tex
@@ -378,10 +378,10 @@ Alternatively, you can create your own taxonomy of subject keywords, which is
 called a \emph{folksonomy}. Folksonomies are what you see with tags on Flickr
 and Unsplash: early content creators assign terms as they see fit, and later
 contributors tend to copy or mimic them. If you take this route, it's worth
-summarizing new tags regularly to look for synonyms, misspellings, differences
-in capitalization, singular/plural discrepancies, and other inconsistencies.
-Doing this will also reveal new tags that you may wish to adopt, which in turn
-gives you insight into how people are viewing your information.
+reviewing new tags regularly to look for synonyms, misspellings, differences in
+capitalization, singular/plural discrepancies, and other inconsistencies.  Doing
+this will also reveal new tags that you may wish to adopt, which in turn gives
+you insight into how people are viewing your information.
 
 \rulemajor{9. Understand the difference between format and subject.}
 
