--- a/10-findable.tex
+++ b/10-findable.tex
@@ -288,7 +288,7 @@ should therefore be as consistent as highway signs with regards to appearance,
 style, and type of information. Wherever possible (and it's \emph{always}
 possible), use mechanisms that users will have become familiar with elsewhere,
 such as the vertically nested folders of file browsers or the left-to-right
-arrangement of breadcumb trails.
+arrangement of breadcrumb trails.
 
 \rulemajor{7. Use meaningful names.}
 
@@ -433,7 +433,7 @@ or point to a term dictionary.
 
 Changing work habits is hard, so remember that while perfection isn't possible,
 progress is. Start by deciding whether to begin your next project with a new set
-of information organizing principles or to go back and alter existing arfefacts
+of information organizing principles or to go back and alter existing artifacts
 \cite{Briney2015}. Whichever you choose, the ``ways you enforce your way of
 doing things changes how users think about the place[s] you made and perhaps
 ultimately, how they think about you'' \cite{Covert2014}.
