updated article in response to reviewer comments; updated references to include suggested sources

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -77,3 +77,24 @@
  year = {2020},
  howpublished = {\url{https://www.asindexing.org/about-indexing/thesauri/online-thesauri-and-authority-files/}}
 }
+
+@misc{NNG2020,
+ author = {Nielsen Norman Group},
+ title = {UX research and consulting firm},
+ year = {2020},
+ howpublished = {\url{https://www.nngroup.com/}}
+}
+
+@misc{NCI2020,
+ author = {National Cancer Institute},
+ title = {NCIthesaurus},
+ year = {2020},
+ howpublished = {\url{https://ncit.nci.nih.gov/ncitbrowser/}}
+}
+
+@misc{FAIR2020,
+ author = {FAIRsharing},
+ title = {FAIRsharing.org},
+ year = {2020},
+ howpublished = {\url{https://fairsharing.org/}}
+}
