--- a/10-findable.tex
+++ b/10-findable.tex
@@ -25,9 +25,9 @@
 
 Information ecosystems consist of users, context, and content, all three of
 which must be addressed to make information findable and usable. Library science
-principles are a framework for doing this: they help researchers to define their
+principles are a framework for doing this: they help researchers to define the full scope of their
 users and needs, and to leverage the structural elements of the software that
-creates, stores, and accesses information to improve findability.
+creates, stores, and accesses information--whether data, research findings, or academic communication stored locally or shared on the internet--to improve findability.
 
 \section*{Author summary}
 
@@ -41,13 +41,13 @@ electronic data has both required and fostered the creation of new ways to do
 this \cite{Rosenfeld2015,Hedden2016}. The problem is not just finding a
 particular bit of information when needed: information may be stored in many
 formats, exist in multiple versions, and need to be shared with varied
-audiences.
+audiences in a professional research or teaching capacity.
 
 Library science offers ways to work through the maze of information generated in
 professional life, and librarians' skills can be applied by any researcher who
 feels overwhelmed. The ten quick tips in this paper build on the fact that all
 information ecosystems have users, context, and content \cite{Rosenfeld2015}.
-To solve the information retrieval problem, researchers must therefore think
+To solve the information retrieval problem, researchers must therefore think broadly
 about who needs that information and the context within which it is created as
 well as its actual content.
 
@@ -59,6 +59,7 @@ upon it, or re-share information through their own networks \cite{Covert2014}.
 While you might think your audience is small and knows your field well, complete
 novices will inevitably find your work if it is publicly available, thereby
 making your actual user base both larger and more diverse.
+Spending time thinking about who your users are and how they currently interact with you and your work product is the foundation of all ten tips.
 
 The information you wish to convey and the way it is currently organized may
 make perfect sense to you, but its meaning for your users is determined by what
@@ -98,6 +99,8 @@ place, but:
 
 \end{itemize}
 
+Reaching out to a small sampling of your users and asking for findability feedback may help you see any gaps in organizational alignment between you and your uers.
+
 \rulemajor{2. Figure out what ``done'' looks like.}
 
 Given how easy it is to create digital information and the plethora of software
@@ -119,21 +122,22 @@ a website, and/or find a particular piece of information within a specific file
 or webpage. Depending on your content, you may have challenges in all three
 areas; the remaining tips on context and content will help you address them.
 
-Returning to the faculty website from the previous tip:
+Returning to the faculty website from the previous tip as just one example of varied needs:
 
 \begin{itemize}
 
 \item
-  The librarian will want bibliographic information in machine-readable form
-  (e.g., BibTeX, MARC, or MODS), either for individual items or in bulk.
-
-\item
   Tenure committee members will want human-readable descriptions of related sets
   of papers along with links to presentations or posters that discuss them.
+  
+\item
+  The librarian will want bibliographic information for your publications in machine-readable form
+  (e.g., BibTeX, MARC, or MODS), either for individual items or in bulk in order to add them to an institutional repository.
+
 
 \item
   Colleagues will want all of the above, plus pointers to the software and data
-  used to produce particular results.
+  used in order to reproduce particular results and.
 
 \item
   Students will want prominent links to the university's learning management
@@ -164,8 +168,8 @@ which supports both scanning and navigation.
 Textual content is created and aggregated in so many forms, using so many
 different programs, that it is difficult to specify strategies beyond headings,
 lists, and highlighting. However, specialists working in the same field tend to
-adopt the same tools, so it is worth finding out how your domain's favorites can
-annotate information as well as creating, manipulating, or storing it. For
+adopt the same tools, so it is worth exploring best practices and innovations in your discipline and topic for 
+annotating information as well as creating, manipulating, or storing it. For
 example:
 
 \begin{itemize}
@@ -188,6 +192,8 @@ example:
   the files in a collection. (See \cite{Pudding} for examples.)
 
 \end{itemize}
+
+On a practical level, templates for file creation, data collection and lab notebooks ensure researchers maximize options for textual structure and ensure consistency among collaborators.
 
 \rulemajor{4. Add metadata.}
 
@@ -282,8 +288,9 @@ suggest new paths they can take \cite{Krug2014}. For example, the URLs of a
 website might all include the name of a section of the site, such as
 \texttt{/papers/} or \texttt{/blog/}.
 
-Always remember, though, that users scan but don't read: they click on the first
-close thing they see and give up very, very quickly. Your markers and directions
+While much else has been written on web usability \cite{Covert2015, NNG2020}, library science focuses on information-seeking behavior.  
+For example, we know that users scan but don't read: they click on the first
+close thing they see and give up very, very quickly \cite{Bates2002}. Your markers and directions
 should therefore be as consistent as highway signs with regards to appearance,
 style, and type of information. Wherever possible (and it's \emph{always}
 possible), use mechanisms that users will have become familiar with elsewhere,
@@ -332,8 +339,10 @@ so that the content can be discovered by a search engine and a user.
 \rulemajor{8. Use tags.}
 
 After meaningful names, tags are the easiest and most effective metadata you can
-create.  Almost all digital tools allow users to add arbitrary tags to items,
-and almost all search tools use them to narrow their focus. This means that you
+create.  While software determines specific options, many digital tools allow users to add arbitrary tags to items.
+File properties and GitHub are two examples of software-neutral platforms that allow for tags.
+Additionally,
+almost all search tools can utilize tags to narrow a query's scope. This means that you
 can now file a single thing in multiple ``locations'', which was not possible in
 the pre-digital era. Multiple tags also assist users from varied backgrounds
 because the terms can be customized to each type of user your information has.
@@ -357,31 +366,27 @@ should:
 
 \end{itemize}
 
-Exactly which terms you use as tags may not matter much for your discipline
-beyond a need for consistency, but if your discipline has an established
-thesaurus, it can be great source for standardized subject terms. Thesauri also
-have built-in subject hierarchies that can help you create navigational
-structure. Examples include the Astronomy Thesaurus, the Getty Art \&
-Architecture Thesaurus, the Education Resources Information Center (ERIC)
-Thesaurus, the NASA Thesaurus, the UNESCO Thesaurus, the GBA Thesaurus of
-Geosciences, and the Medical Subject Headings (MeSH) \cite{ASI2020}.
+Information to be tagged can range from informal personal use to data sets submitted with publications or included in repositories.  
+The benefit of tagging comes from using the appropriate terms in all of those situations, not just when a journal submission requires it.
 
-These types of term lists are \emph{controlled vocabularies}: they have a
-defined list of terms created and maintained by experts. There may or may not be
-relationships built between terms, such as equivalencies (``CA'' for
+For work product that serves just you and your future self, you can create your own taxonomy of subject keywords, which is
+called a \emph{folksonomy}. Folksonomies are what you see with tags on Flickr: 
+early content creators assign terms as they see fit, and later
+contributors can use those or add their own. If you take this route, it's worth
+reviewing new tags regularly to look for synonyms, misspellings, differences in
+capitalization, singular/plural discrepancies, and other inconsistencies. 
+
+Exactly which terms you use as tags for personal consumption may not matter much, but work that is shared out to colleagues and the research community often require or encourage tags that conform to certain standards and/or use particular terms \cite{FAIR2020}.
+Common term lists to standardize terms used to tag content--both data and textual information--include taxonomies, ontologies and thesauri.
+Thesauri and taxonomies
+generally have built-in subject hierarchies that can help you create navigational
+structure, while ontologies map relationships between ideas, but all three are \emph{controlled vocabularies}.  Controlled means that they have a
+defined list of terms created and maintained by experts, rather than the crowdsourced approach of a folksonomy. There may or may not be
+relationships built between terms in a controlled vocabulary, such as equivalencies (``CA'' for
 ``California''), broader/narrower terms (United States/California), and/or
 replacement (weed \emph{use} marijuana). Established subject terms will match
-article databases and library catalogs that you and your users might already be
-familiar with, which will again aid search and navigation.
-
-Alternatively, you can create your own taxonomy of subject keywords, which is
-called a \emph{folksonomy}. Folksonomies are what you see with tags on Flickr
-and Unsplash: early content creators assign terms as they see fit, and later
-contributors tend to copy or mimic them. If you take this route, it's worth
-reviewing new tags regularly to look for synonyms, misspellings, differences in
-capitalization, singular/plural discrepancies, and other inconsistencies.  Doing
-this will also reveal new tags that you may wish to adopt, which in turn gives
-you insight into how people are viewing your information.
+article databases, data repositories, and library catalogs that you and your users might already be
+familiar with, which will again aid search and navigation.  Well-known examples in the United States include the National Cancer Institute (NCI) Thesaurus /cite{NCI2020} and the Medical Subject Headings (MeSH) \cite{ASI2020}.
 
 \rulemajor{9. Understand the difference between format and subject.}
 
