Edits based on reviewer feedback.

--- a/10-findable.bib
+++ b/10-findable.bib
@@ -46,6 +46,13 @@
  isbn = {9781500615994},
 }
 
+@misc{FAIR2020,
+ author = {FAIRsharing},
+ title = {FAIRsharing.org},
+ year = {2020},
+ howpublished = {\url{https://fairsharing.org/}}
+}
+
 @book{Hedden2016,
  author = {Heather Hedden},
  title = {The Accidental Taxonomist},
@@ -68,6 +75,20 @@
  year = {2014},
  publisher = {New Riders},
  isbn = {9780321965516},
+}
+
+@misc{NCI2020,
+ author = {National Cancer Institute},
+ title = {{NCI} Thesaurus},
+ year = {2020},
+ howpublished = {\url{https://ncit.nci.nih.gov/ncitbrowser/}}
+}
+
+@misc{NNG2020,
+ author = {Nielsen Norman Group},
+ title = {UX research and consulting firm},
+ year = {2020},
+ howpublished = {\url{https://www.nngroup.com/}}
 }
 
 @misc{Pudding,
