--- a/second-submission-changes.tex
+++ b/second-submission-changes.tex
@@ -1,7 +1,47 @@
 \documentclass[10pt,letterpaper]{article}
+%DIF LATEXDIFF DIFFERENCE FILE
+%DIF DEL /Users/gvwilson/writing/findable/first-submission.tex   Sat May 16 06:53:14 2020
+%DIF ADD /Users/gvwilson/writing/findable/10-findable.tex        Sat May 16 06:45:21 2020
 \include{settings}
 
 \newcommand{\rulemajor}[1]{\section*{#1}}
+%DIF PREAMBLE EXTENSION ADDED BY LATEXDIFF
+%DIF UNDERLINE PREAMBLE %DIF PREAMBLE
+\RequirePackage[normalem]{ulem} %DIF PREAMBLE
+\RequirePackage{color}\definecolor{RED}{rgb}{1,0,0}\definecolor{BLUE}{rgb}{0,0,1} %DIF PREAMBLE
+\providecommand{\DIFadd}[1]{{\protect\color{blue}\uwave{#1}}} %DIF PREAMBLE
+\providecommand{\DIFdel}[1]{{\protect\color{red}\sout{#1}}}                      %DIF PREAMBLE
+%DIF SAFE PREAMBLE %DIF PREAMBLE
+\providecommand{\DIFaddbegin}{} %DIF PREAMBLE
+\providecommand{\DIFaddend}{} %DIF PREAMBLE
+\providecommand{\DIFdelbegin}{} %DIF PREAMBLE
+\providecommand{\DIFdelend}{} %DIF PREAMBLE
+\providecommand{\DIFmodbegin}{} %DIF PREAMBLE
+\providecommand{\DIFmodend}{} %DIF PREAMBLE
+%DIF FLOATSAFE PREAMBLE %DIF PREAMBLE
+\providecommand{\DIFaddFL}[1]{\DIFadd{#1}} %DIF PREAMBLE
+\providecommand{\DIFdelFL}[1]{\DIFdel{#1}} %DIF PREAMBLE
+\providecommand{\DIFaddbeginFL}{} %DIF PREAMBLE
+\providecommand{\DIFaddendFL}{} %DIF PREAMBLE
+\providecommand{\DIFdelbeginFL}{} %DIF PREAMBLE
+\providecommand{\DIFdelendFL}{} %DIF PREAMBLE
+%DIF LISTINGS PREAMBLE %DIF PREAMBLE
+\RequirePackage{listings} %DIF PREAMBLE
+\RequirePackage{color} %DIF PREAMBLE
+\lstdefinelanguage{DIFcode}{ %DIF PREAMBLE
+%DIF DIFCODE_UNDERLINE %DIF PREAMBLE
+  moredelim=[il][\color{red}\sout]{\%DIF\ <\ }, %DIF PREAMBLE
+  moredelim=[il][\color{blue}\uwave]{\%DIF\ >\ } %DIF PREAMBLE
+} %DIF PREAMBLE
+\lstdefinestyle{DIFverbatimstyle}{ %DIF PREAMBLE
+	language=DIFcode, %DIF PREAMBLE
+	basicstyle=\ttfamily, %DIF PREAMBLE
+	columns=fullflexible, %DIF PREAMBLE
+	keepspaces=true %DIF PREAMBLE
+} %DIF PREAMBLE
+\lstnewenvironment{DIFverbatim}{\lstset{style=DIFverbatimstyle}}{} %DIF PREAMBLE
+\lstnewenvironment{DIFverbatim*}{\lstset{style=DIFverbatimstyle,showspaces=true}}{} %DIF PREAMBLE
+%DIF END PREAMBLE EXTENSION ADDED BY LATEXDIFF
 
 \begin{document}
 \vspace*{0.2in}
@@ -25,11 +65,11 @@
 
 Information ecosystems consist of users, context, and content, all three of
 which must be addressed to make information findable and usable. Library science
-principles are a framework for doing this: they help researchers improve
-findability by defining the full scope of their users' needs and leveraging the
-structural elements of the software that creates, stores, and accesses data,
+principles are a framework for doing this: they help researchers \DIFdelbegin \DIFdel{to define their usersand needs , and to leverage }\DIFdelend \DIFaddbegin \DIFadd{improve
+findability by defining the full scope of their users' needs and leveraging }\DIFaddend the
+structural elements of the software that creates, stores, and accesses \DIFdelbegin \DIFdel{information to improve findability}\DIFdelend \DIFaddbegin \DIFadd{data,
 research findings, or academic communication stored locally or shared on the
-internet.
+internet}\DIFaddend .
 
 \section*{Author summary}
 
@@ -40,17 +80,19 @@ Greg Wilson works in the education team at RStudio, PBC.
 
 Researchers have always had to manage information, but the exponential growth of
 electronic data has both required and fostered the creation of new ways to do
-this \cite{Rosenfeld2015,Hedden2016}. The problem is not just finding particular
-information when needed: information may be stored in many formats, exist in
-multiple versions, and need to be shared with varied audiences for both research
-and teaching.
+this \cite{Rosenfeld2015,Hedden2016}. The problem is not just finding \DIFdelbegin \DIFdel{a
+particular
+bit of }\DIFdelend \DIFaddbegin \DIFadd{particular
+}\DIFaddend information when needed: information may be stored in many formats, exist in
+multiple versions, and need to be shared with varied audiences \DIFaddbegin \DIFadd{for both research
+and teaching}\DIFaddend .
 
 Library science offers ways to work through the maze of information generated in
 professional life, and librarians' skills can be applied by any researcher who
 feels overwhelmed. The ten quick tips in this paper build on the fact that all
 information ecosystems have users, context, and content \cite{Rosenfeld2015}.
 To solve the information retrieval problem, researchers must therefore think
-broadly about who needs that information and the context within which it is
+\DIFaddbegin \DIFadd{broadly }\DIFaddend about who needs that information and the context within which it is
 created as well as its actual content.
 
 \rulemajor{1. Design for a wide range of users.}
@@ -60,9 +102,10 @@ the finding. This includes everyone who might contribute to your work, expand
 upon it, or re-share information through their own networks \cite{Covert2014}.
 While you might think your audience is small and knows your field well, complete
 novices will inevitably find your work if it is publicly available, thereby
-making your actual user base both larger and more diverse.  Thinking about who
+making your actual user base both larger and more diverse.  \DIFaddbegin \DIFadd{Thinking about who
 your users are and how they interact with you and your work is the foundation of
 all ten tips.
+}\DIFaddend 
 
 The information you wish to convey and the way it is currently organized may
 make perfect sense to you, but its meaning for your users is determined by what
@@ -102,10 +145,11 @@ place, but:
 
 \end{itemize}
 
-Reaching out to just a handful of users to ask for findability feedback will
+\DIFaddbegin \DIFadd{Reaching out to just a handful of users to ask for findability feedback will
 help you see any gaps in organizational alignment.
+}
 
-\rulemajor{2. Figure out what ``done'' looks like.}
+\DIFaddend \rulemajor{2. Figure out what ``done'' looks like.}
 
 Given how easy it is to create digital information and the plethora of software
 and formats you may employ, you almost certainly have lots of information in
@@ -126,23 +170,31 @@ a website, and/or find a particular piece of information within a specific file
 or webpage. Depending on your content, you may have challenges in all three
 areas; the remaining tips on context and content will help you address them.
 
-Returning to the faculty website from the previous tip as just one example of
-varied needs:
+Returning to the faculty website from the previous tip \DIFaddbegin \DIFadd{as just one example of
+varied needs}\DIFaddend :
 
 \begin{itemize}
 
 \item
-  Tenure committee members will want human-readable descriptions of related sets
+  \DIFaddbegin \DIFadd{Tenure committee members will want human-readable descriptions of related sets
   of papers along with links to presentations or posters that discuss them.
- 
-\item
-  The librarian will want bibliographic information for your publications in
-  machine-readable form (e.g., BibTeX, MARC, or MODS), either for individual
-  items or in bulk for addition to an institutional repository.
+ }
 
 \item
-  Colleagues will want all of the above, plus pointers to the software and data
-  used in order to reproduce particular results.
+  \DIFaddend The librarian will want bibliographic information \DIFaddbegin \DIFadd{for your publications }\DIFaddend in
+  machine-readable form (e.g., BibTeX, MARC, or MODS), either for individual
+  items or in bulk \DIFaddbegin \DIFadd{for addition to an institutional repository}\DIFaddend .
+
+\item
+  \DIFdelbegin \DIFdel{Tenure committee members will want human-readable descriptions of related sets
+  of papers along with links to presentations or posters that discuss them.
+}%DIFDELCMD < 
+
+%DIFDELCMD < \item
+\item%DIFAUXCMD
+%DIFDELCMD <   %%%
+\DIFdelend Colleagues will want all of the above, plus pointers to the software and data
+  used \DIFdelbegin \DIFdel{to produce }\DIFdelend \DIFaddbegin \DIFadd{in order to reproduce }\DIFaddend particular results.
 
 \item
   Students will want prominent links to the university's learning management
@@ -173,7 +225,8 @@ which supports both scanning and navigation.
 Textual content is created and aggregated in so many forms, using so many
 different programs, that it is difficult to specify strategies beyond headings,
 lists, and highlighting. However, specialists working in the same field tend to
-adopt the same tools, so it is worth exploring how your peers annotate
+adopt the same tools, so it is worth \DIFdelbegin \DIFdel{finding out how your domain's favorites can
+}\DIFdelend \DIFaddbegin \DIFadd{exploring how your peers }\DIFaddend annotate
 information as well as creating, manipulating, or storing it. For example:
 
 \begin{itemize}
@@ -197,10 +250,11 @@ information as well as creating, manipulating, or storing it. For example:
 
 \end{itemize}
 
-On a practical level, templates for file creation, data collection, and lab
+\DIFaddbegin \DIFadd{On a practical level, templates for file creation, data collection, and lab
 notebooks makes it easier to be consistent and to spot inconsistencies.
+}
 
-\rulemajor{4. Add metadata.}
+\DIFaddend \rulemajor{4. Add metadata.}
 
 Just like people who end up with piles of photographs with nothing written on
 the back, we all have digital mounds of files and content with no metadata
@@ -293,11 +347,15 @@ suggest new paths they can take \cite{Krug2014}. For example, the URLs of a
 website might all include the name of a section of the site, such as
 \texttt{/papers/} or \texttt{/blog/}.
 
-While much has been written about web usability in general
-\cite{Covert2014,NNG2020}, library science focuses on information-seeking
-behavior.  For example, we know that users scan but don't read: they click on
+\DIFdelbegin \DIFdel{Always remember, though, }\DIFdelend \DIFaddbegin \DIFadd{While much has been written about web usability in general
+\mbox{%DIFAUXCMD
+\cite{Covert2014,NNG2020}}\hspace{0pt}%DIFAUXCMD
+, library science focuses on information-seeking
+behavior.  For example, we know }\DIFaddend that users scan but don't read: they click on
 the first close thing they see and give up very, very quickly
-\cite{Bates2002}. Your markers and directions should therefore be as consistent
+\DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\cite{Bates2002}}\hspace{0pt}%DIFAUXCMD
+}\DIFaddend . Your markers and directions should therefore be as consistent
 as highway signs with regards to appearance, style, and type of
 information. Wherever possible (and it's \emph{always} possible), use mechanisms
 that users will have become familiar with elsewhere, such as the vertically
@@ -346,10 +404,11 @@ so that the content can be discovered by a search engine and a user.
 \rulemajor{8. Use tags.}
 
 After meaningful names, tags are the easiest and most effective metadata you can
-create.  Almost all digital tools allow users to add arbitrary tags to items:
+create.  Almost all digital tools allow users to add arbitrary tags to items\DIFdelbegin \DIFdel{,
+and }\DIFdelend \DIFaddbegin \DIFadd{:
 file properties on Windows and labels on GitHub issues are just two examples.
-Additionally, almost all search tools leverage tags to narrow a query's
-scope. This means that you can now file a single thing in multiple
+Additionally, }\DIFaddend almost all search tools \DIFdelbegin \DIFdel{use them to narrow their focus}\DIFdelend \DIFaddbegin \DIFadd{leverage tags to narrow a query's
+scope}\DIFaddend . This means that you can now file a single thing in multiple
 ``locations'', which was not possible in the pre-digital era. Multiple tags also
 assist users from varied backgrounds because the terms can be customized to each
 type of user your information has.
@@ -373,37 +432,69 @@ should:
 
 \end{itemize}
 
-What should you tag?  The answer is ``everything'' from informal personal notes
+\DIFdelbegin \DIFdel{Exactly which terms you }\DIFdelend \DIFaddbegin \DIFadd{What should you tag?  The answer is ``everything'' from informal personal notes
 to data sets submitted with publications or included in repositories, because it
 is all material you will want to be able to find later.  The benefit of tagging
 comes from doing it in all of those situations, not just when a journal
 submission requires it.
+}
 
-If you are certain something is for purely personal use, you can create your own
-taxonomy of subject keywords, which is called a \emph{folksonomy}. Folksonomies
+\DIFadd{If you are certain something is for purely personal use, you can create your own
+taxonomy of subject keywords, which is called a }\emph{\DIFadd{folksonomy}}\DIFadd{. Folksonomies
 are what you see with tags on Flickr: early content creators assign terms as
 they see fit, and later contributors can use those or add their own. If you take
 this route, it's worth reviewing new tags regularly to look for synonyms,
 misspellings, differences in capitalization, singular/plural discrepancies, and
 other inconsistencies.
+}
 
-What terms you use as tags for personal consumption may not matter much, but
+\DIFadd{What terms you }\DIFaddend use as tags \DIFaddbegin \DIFadd{for personal consumption }\DIFaddend may not matter much\DIFdelbegin \DIFdel{for your discipline
+beyond a need for consistency, but
+if your discipline has an established
+thesaurus, it can be great source for standardized subject terms . Thesauri also
+}\DIFdelend \DIFaddbegin \DIFadd{, but
 work that is shared with colleagues should use particular terms or tags that
-conform to certain standards \cite{FAIR2020}.  These terms typically come from
-taxonomies, thesauri, and ontologies: taxonomies and thesauri generally have
-built-in subject hierarchies that can help you create navigational structure,
-while ontologies map relationships between ideas. Crucially, all three are
-\emph{controlled vocabularies}: they are a defined list of terms created and
-maintained by experts rather than being crowdsourced like a folksonomy.
+conform to certain standards \mbox{%DIFAUXCMD
+\cite{FAIR2020}}\hspace{0pt}%DIFAUXCMD
+.  These terms typically come from
+taxonomies, thesauri, and ontologies: taxonomies and thesauri generally }\DIFaddend have
+built-in subject hierarchies that can help you create navigational structure\DIFdelbegin \DIFdel{. Examples include the Astronomy Thesaurus,
+the Getty Art \&
+Architecture Thesaurus, the Education Resources Information Center (ERIC)
+Thesaurus, the NASA Thesaurus, the UNESCO Thesaurus, the GBA Thesaurus of
+Geosciences, and the Medical Subject Headings (MeSH) \mbox{%DIFAUXCMD
+\cite{ASI2020}}\hspace{0pt}%DIFAUXCMD
+. }%DIFDELCMD < 
 
-There may or may not be relationships built between terms in a controlled
-vocabulary, such as equivalencies (``CA'' for ``California''), broader/narrower
+%DIFDELCMD < %%%
+\DIFdel{These types of term lists }\DIFdelend \DIFaddbegin \DIFadd{,
+while ontologies map relationships between ideas. Crucially, all three }\DIFaddend are
+\emph{controlled vocabularies}: they \DIFdelbegin \DIFdel{have }\DIFdelend \DIFaddbegin \DIFadd{are }\DIFaddend a defined list of terms created and
+maintained by experts \DIFdelbegin \DIFdel{. }\DIFdelend \DIFaddbegin \DIFadd{rather than being crowdsourced like a folksonomy.
+}
+
+\DIFaddend There may or may not be relationships built between terms \DIFaddbegin \DIFadd{in a controlled
+vocabulary}\DIFaddend , such as equivalencies (``CA'' for ``California''), broader/narrower
 terms (United States/California), and/or replacement (weed \emph{use}
-marijuana). Established subject terms will match article databases, data
-repositories, and library catalogs that you and your users might already be
-familiar with, which will again aid search and navigation.  Well-known examples
+marijuana). Established subject terms will match article databases\DIFaddbegin \DIFadd{, data
+repositories, }\DIFaddend and library catalogs that you and your users might already be
+familiar with, which will again aid search and navigation.  \DIFdelbegin %DIFDELCMD < 
+
+%DIFDELCMD < %%%
+\DIFdel{Alternatively, you can create your own taxonomy of subject keywords, which is
+called a }\emph{\DIFdel{folksonomy}}%DIFAUXCMD
+\DIFdel{. Folksonomies are what you see with tags on Flickr
+and Unsplash: early content creators assign terms as they see fit, and later
+contributors tend to copy or mimic them. If you take this route, it's worth
+reviewing new tags regularly to look for synonyms, misspellings, differences in capitalization, singular/plural discrepancies, and other inconsistencies.  Doing
+this will also reveal new tags that you may wish to adopt, which in turn gives
+you insight into how people are viewing your information}\DIFdelend \DIFaddbegin \DIFadd{Well-known examples
 in the United States include the National Cancer Institute (NCI) Thesaurus
-\cite{NCI2020} and the Medical Subject Headings (MeSH) \cite{ASI2020}.
+\mbox{%DIFAUXCMD
+\cite{NCI2020} }\hspace{0pt}%DIFAUXCMD
+and the Medical Subject Headings (MeSH) \mbox{%DIFAUXCMD
+\cite{ASI2020}}\hspace{0pt}%DIFAUXCMD
+}\DIFaddend .
 
 \rulemajor{9. Understand the difference between format and subject.}
 
