Updated to include a citation to the original FAIR principles article from 2016

--- a/10-findable.bib
+++ b/10-findable.bib
@@ -127,6 +127,15 @@
   doi = {10.1371/journal.pbio.1001745}
 }
 
+@article{Wilkinson2016,
+ title = {The FAIR Guiding Principles for scientific data management and stewardship},
+ author = {Mark D. Wilkinson},
+ journal = {Nature: Scientific Data},
+ volume = {3},
+ pages = {160018},
+ year = {2016}
+}
+
 @article{Wilson2017,
   author = {Greg Wilson and Jennifer Bryan and Karen Cranston and Justin Kitzes and Lex Nederbragt and Tracy K. Teal},
   journal = {{PLoS} Computational Biology},
