Added Ibraheem as author; updated Abstract & Introduction to include mention & citation of FAIR principles.

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -13,9 +13,11 @@
 \newline
 \\
 {Sarah~Lin}\textsuperscript{1,*},
+{Ibraheem~Ali}\textsuperscript{2}
 {Greg~Wilson}\textsuperscript{1}
 \\
 \textbf{1} RStudio, Inc.
+\textbf{2} University of California, Los Angeles
 \\
 \bigskip
 * sarah.lin@rstudio.com
@@ -30,10 +32,13 @@ findability by defining the full scope of their users' needs and leveraging the
 structural elements of the software that creates, stores, and accesses data,
 research findings, or academic communication stored locally or shared on the
 internet.
+As scholars evaluate their research communication strategies,
+they can use these steps to improve how their research is discovered and communicated.
 
 \section*{Author summary}
 
 Sarah Lin is the Information Architect and Digital Librarian at RStudio, PBC.
+Ibraheem Ali is the Data Sciences Librarian at the University of California, Los Angeles.
 Greg Wilson works in the education team at RStudio, PBC.
 
 \section*{Introduction}
@@ -44,6 +49,11 @@ this \cite{Rosenfeld2015,Hedden2016}. The problem is not just finding particular
 information when needed: information may be stored in many formats, exist in
 multiple versions, and need to be shared with varied audiences for both research
 and teaching.
+
+In the last 4 years, growing adoption of FAIR principles \cite{Wilkinson2016} has helped researchers manage the data and other digital objects associated with their professional work.
+The F in FAIR stands for findability, and as a guiding principle for managing data it aligns completely with the following 10 tips.
+This paper is concerned with findability both including research data and extending beyond it to encompass all types of work product produced during a researcher's career, 
+inside or outside of academia.
 
 Library science offers ways to work through the maze of information generated in
 professional life, and librarians' skills can be applied by any researcher who
