added citations to DOI & ORCID websites

--- a/10-findable.bib
+++ b/10-findable.bib
@@ -46,6 +46,13 @@
  isbn = {9781500615994},
 }
 
+@misc{DOI2020,
+ author = {DOI},
+ title = {doi.org},
+ year = {2020},
+ howpublished = {\url{https://doi.org/}}
+}
+
 @misc{FAIR2020,
  author = {FAIRsharing},
  title = {FAIRsharing.org},
@@ -89,6 +96,13 @@
  title = {UX research and consulting firm},
  year = {2020},
  howpublished = {\url{https://www.nngroup.com/}}
+}
+
+@misc{ORCID2020,
+ author = {ORCID},
+ title = {orcid.org},
+ year = {2020},
+ howpublished = {\url{https://orcid.org/}}
 }
 
 @misc{Pudding,
