updates to tips 1-3

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -70,7 +70,9 @@ the finding. This includes everyone who might contribute to your work, expand
 upon it, or re-share information through their own networks \cite{Covert2014}.
 While you might think your audience is small and knows your field well, complete
 novices will inevitably find your work if it is publicly available, thereby
-making your actual user base both larger and more diverse.  Thinking about who
+making your actual user base both larger and more diverse.  
+Diversity increases the chance that users will access your work through an intermediary, such as translation software or a screen reader, as well.
+Thinking about who
 your users are and how they interact with you and your work is the foundation of
 all ten tips.
 
@@ -87,7 +89,7 @@ deliberately ridiculous, it illustrates the fact that every way of organizing
 knowledge embodies choices by the organizer, which may or may not align with
 those of the audience.
 
-More prosaically, consider the website of a faculty member coming up for tenure:
+More concretely, consider the website of a faculty member coming up for tenure:
 She created the website as post-doc to publicize her papers and to make it
 easier to fill out grant applications by listing professional activities in one
 place, but:
@@ -115,23 +117,23 @@ place, but:
 Reaching out to just a handful of users to ask for findability feedback will
 help you see any gaps in organizational alignment.
 
-\rulemajor{2. Figure out what ``done'' looks like.}
+\rulemajor{2. Design with the end in mind.}
 
 Given how easy it is to create digital information and the plethora of software
 and formats you may employ, you almost certainly have lots of information in
 lots of different formats and locations. The second step in making things
-findable is therefore to catalog what you have, and then determine what should
+findable is to think about the end result you desire, before cataloging what you have, and then determining what should
 go where.
 
 Figuring out what ``done'' will look like can be personally motivating, but once
 again you must determine what your users will consider a good outcome, which may
 not align with what you would do if you were the information's only consumer.
-However, remember that your future self is also one of your users: everyone is
+However, remember that your future self \cite{Briney2015} is also one of your users: everyone is
 forgetful, so anything you do for others will likely pay off for yourself
 eventually.
 
 Remember too that the question of how to find something can mean different
-things. Users may need to find your work on the web, find a specific item within
+things. Users may need to find your (published or unpublished) work on the web, find a specific item within
 a website, and/or find a particular piece of information within a specific file
 or webpage. Depending on your content, you may have challenges in all three
 areas; the remaining tips on context and content will help you address them.
@@ -152,20 +154,23 @@ varied needs:
 
 \item
   Colleagues will want all of the above, plus pointers to the software and data
-  used in order to reproduce particular results.
+  used in order to reproduce particular results or "restart the data lifecycle" \cite{@Briney2015}.
 
 \item
   Students will want prominent links to the university's learning management
   system (LMS), which is where the course information they're searching for is
   actually located.
+  
+  \item
+  Everyone will want persistent links like Digital Object Identifiers (DOIs) \cite{DOI2020} and ORCID \cite{ORCID2020} identifiers, in order to find your papers.
 
 \end{itemize}
 
 \noindent
 Each of these users might want content organized chronologically or topically.
-It's easy to provide both if the website is generated programmatically using a
+It's easy to provide from websites that are generated programmatically using a
 tool such as Blogdown \cite{Xie2017} or Wordpress \cite{Williams2015}, but
-increasing the number of navigation options may make it harder for users to
+increasing the number of site navigation options may make it harder for users to
 determine how the things they find are related to each other.
 
 \rulemajor{3. Use textual structure.}
@@ -179,6 +184,8 @@ than just enlarged text), bulleted or numbered lists, and \textbf{highlighting}
 terms that are important all make both the information and its structure easier
 to understand. Similarly, headings and table of contents can be hyperlinked,
 which supports both scanning and navigation.
+Textual structure aids navigation both by helping users create a mental map of the webpage or document they have found, 
+but also by exposing elements utilized by screen readers to make your work accessible.
 
 Textual content is created and aggregated in so many forms, using so many
 different programs, that it is difficult to specify strategies beyond headings,
