--- a/10-findable.tex
+++ b/10-findable.tex
@@ -17,7 +17,7 @@
 {Greg~Wilson}\textsuperscript{1}
 \\
 \textbf{1} RStudio, Inc.
-\textbf{2} University of California, Los Angeles
+\textbf{2} Louise M. Darling Biomedical Library, University of California, Los Angeles
 \\
 \bigskip
 * sarah.lin@rstudio.com
@@ -38,7 +38,7 @@ they can use these steps to improve how their research is discovered and communi
 \section*{Author summary}
 
 Sarah Lin is the Information Architect and Digital Librarian at RStudio, PBC.
-Ibraheem Ali is the Data Sciences Librarian at the University of California, Los Angeles.
+Ibraheem Ali is the Sciences Data Librarian at the University of California, Los Angeles.
 Greg Wilson works in the education team at RStudio, PBC.
 
 \section*{Introduction}
